[package]
name = "commitai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "commitai"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = "0.8.5"
reqwest = { version = "0.11",features = ["json"]}
actix-web = "4"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
crossterm = "0.27"
